samples/workload-identity-federation-spiffe/deploy/ztwim-operator.yml
apiVersion: v1
kind: Namespace
metadata:
  name: zero-trust-workload-identity-manager
