samples/workload-identity-federation-spiffe/deploy/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: workload-identity-federation-spiffe
  namespace: workload-identity-spiffe
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: workload-identity-federation-spiffe
  template:
    metadata:
      labels:
        app.kubernetes.io/name: workload-identity-federation-spiffe
    spec:
      restartPolicy: Always
      serviceAccountName: workload-identity-federation-spiffe
      containers:
        - name: app
          image: quarkus-langchain4j-sample-workload-identity-federation-spiffe:1.0.0-SNAPSHOT
          volumeMounts:
            - name: spiffe-token
              readOnly: true
              mountPath: /var/run/secrets/tokens

        - name: spiffe-token-refresher
          image: registry.redhat.io/ubi9/python-311:latest
          command:
            - /bin/bash
            - '-c'
            - |
              [...]
          volumeMounts:
            - name: spiffe-workload-api
              readOnly: true
              mountPath: /run/spire/sockets
            - name: spiffe-token
              mountPath: /var/run/secrets/tokens
      volumes:
        - name: spiffe-workload-api
          csi:
            driver: csi.spiffe.io
            readOnly: true
        - name: spiffe-token
          emptyDir:
            medium: Memory
  strategy:
    type: Recreate
